hw 7 complete